class based view in Dealer

--- a/templates/emp.html
+++ b/templates/emp.html
@@ -32,7 +32,7 @@
                             <label for="e_id" class="form-control-label">Employee ID:</label>
                         </div>
                         <div class="col-md-2">
-                            <input type="text" class="form-control" id="e_id" placeholder="Code" name="eid"
+                            <input type="text" class="form-control" id="e_id" placeholder="Code" name="Emp_id"
                                    value="{{ emp.Emp_id }}" required/>
                         </div>
                     </div>
@@ -63,7 +63,7 @@
                             <label for="sal" class="form-control-label">Salary:</label>
                         </div>
                         <div class="form-group col-md-4">
-                            <input type="text" class="form-control" id="sal" placeholder="Salary" name="sal"
+                            <input type="text" class="form-control" id="sal" placeholder="Salary" name="salary"
                                    value="{{ emp.salary }}" required/>
                         </div>
                     </div>
@@ -72,7 +72,7 @@
                             <label for="phn_no" class="form-control-label padtop5">Phone Number:</label>
                         </div>
                         <div class="col-md-4">
-                            <input type="text" name="pno" class="form-control" id="phn_no" placeholder="Contact Number"
+                            <input type="text" name="phone_number" class="form-control" id="phn_no" placeholder="Contact Number"
                                    value="{{ emp.phone_number }}" required/>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                             <label for="e_id" class="form-control-label">Employee ID:</label>
                         </div>
                         <div class="col-md-2">
-                            <input type="text" class="form-control" id="e_id" placeholder="ID" name="eid" required/>
+                            <input type="text" class="form-control" id="e_id" placeholder="ID" name="Emp_id" required/>
                         </div>
                     </div>
                     <div class="row padtop15">
@@ -141,7 +141,7 @@
                             <label for="sal" class="form-control-label">Salary:</label>
                         </div>
                         <div class="form-group col-md-4">
-                            <input type="text" class="form-control" id="sal" placeholder="Salary" name="sal" required/>
+                            <input type="text" class="form-control" id="sal" placeholder="Salary" name="salary" required/>
                         </div>
                     </div>
                     <div class="row padtop5">
@@ -149,7 +149,7 @@
                             <label for="phn_no" class="form-control-label padtop5">Phone Number:</label>
                         </div>
                         <div class="col-md-4">
-                            <input type="text" name="pno" class="form-control" id="phn_no" placeholder="Contact Number"
+                            <input type="text" name="phone_number" class="form-control" id="phn_no" placeholder="Contact Number"
                                    required/>
                         </div>
                     </div>
