--- a/templates/dealer.html
+++ b/templates/dealer.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}{% endblock title %}
+{% block title %}Dealer{% endblock title %}
 {% block content %}
 <style>
     .black-text {
@@ -79,7 +79,7 @@
                         </button>
                     </div>
                     <div class="col-md-offset-8 padtop15">
-                        <button type="submit" class="delbut btn btn-danger"><a
+                        <button type="submit" class="delbut btn btn-danger" onclick="return confirm('Are you sure you want to delete this record?')"><a
                                 href="{% url 'dealerformdelete' dealer.id %}">Delete Record</a></button>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                         <label for="dname" class="form-control-label">Dealer Name:</label>
                     </div>
                     <div class="form-group col-md-8">
-                        <input type="text" name="dname" class="form-control" id="dname" placeholder="Dealer Name"
+                        <input type="text" name="dealer_name" class="form-control" id="dname" placeholder="Dealer Name"
                                value="" required/>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                         <label for="phn_no" class="form-control-label padtop5">Phone Number:</label>
                     </div>
                     <div class="col-md-4">
-                        <input type="text" name="pno" class="form-control" id="phn_no" placeholder="Contact Number"
+                        <input type="text" name="phone_number" class="form-control" id="phn_no" placeholder="Contact Number"
                                required/>
                     </div>
                 </div>
@@ -133,6 +133,7 @@
                             {% else %}
                                 Update Record
                             {% endif %}
+
                         </button>
                     </div>
                 </div>
