--- a/templates/emp.html
+++ b/templates/emp.html
@@ -25,7 +25,7 @@
         </div>
         <div class="panel-body">
             {% if emp %}
-                <form action="{% url 'empformupdate' emp.Emp_id  %}" method="post">
+                <form action="{% url 'empformupdate' emp.id  %}" method="post">
                     {% csrf_token %}
                     <div class="row">
                         <div class="col-md-3 padtop5">
