--- a/templates/dealer.html
+++ b/templates/dealer.html
@@ -51,7 +51,7 @@
                         <label for="phn_no" class="form-control-label padtop5">Phone Number:</label>
                     </div>
                     <div class="col-md-4">
-                        <input type="text" name="pno" class="form-control" id="phn_no" placeholder="Contact Number"
+                        <input type="text" name="phone_number" class="form-control" id="phn_no" placeholder="Contact Number"
                                value="{{ dealer.phone_number }}" required/>
                     </div>
                 </div>
