--- a/templates/dealer.html
+++ b/templates/dealer.html
@@ -33,7 +33,7 @@
                         <label for="dname" class="form-control-label">Dealer Name:</label>
                     </div>
                     <div class="form-group col-md-8">
-                        <input type="text" name="dname" class="form-control" id="dname" placeholder="Dealer Name"
+                        <input type="text" name="dealer_name" class="form-control" id="dname" placeholder="Dealer Name"
                                value="{{ dealer.dealer_name }}" required/>
                     </div>
                 </div>
