--- a/templates/med.html
+++ b/templates/med.html
@@ -32,7 +32,7 @@
                             <label for="m_id" class="form-control-label">Medicine Code:</label>
                         </div>
                         <div class="col-md-2">
-                            <input type="text" class="form-control" id="m_id" placeholder="Code" name="mid"
+                            <input type="text" class="form-control" id="m_id" placeholder="Code" name="m_id"
                                    value="{{ med.m_id }}"/>
                         </div>
                     </div>
@@ -45,15 +45,21 @@
                                    value="{{ med.mname }}" required/>
                         </div>
                     </div>
+
                     <div class="row padtop5">
                         <div class="col-md-3 padtop5">
                             <label for="dname" class="form-control-label">Dealer Name:</label>
                         </div>
                         <div class="form-group col-md-8">
-                            <input type="text" name="dname" class="form-control" id="dname" placeholder="Dealer Name"
-                                   value="{{ med.dname }}"/>
+                            <select name="dealer_name" class="form-control" id="dname">
+                                <option value="" selected disabled>Select Dealer</option>
+                                {% for dealers in dealers %}
+                                    <option value="{{ dealers.id }}">{{ dealers.name }}</option>
+                                {% endfor %}
+                            </select>
                         </div>
                     </div>
+
                     <div class="row padtop5">
                         <div class="col-md-3">
                             <label for="price" class="form-control-label padtop5">Price:</label>
@@ -96,7 +102,7 @@
                         </div>
                         <div class="col-md-offset-8 padtop15">
                             <button type="submit" class="delbut btn btn-danger"><a
-                                    href="{% url 'medformdelete' med.id %}">Delete Record</a></button>
+                                    href="{% url 'medformdelete' med.id %}" >Delete Record</a></button>
                         </div>
                     </div>
                 </form>
@@ -108,7 +114,7 @@
                             <label for="m_id" class="form-control-label">Medicine Code:</label>
                         </div>
                         <div class="col-md-2">
-                            <input type="text" class="form-control" id="m_id" placeholder="Code" name="mid"/>
+                            <input type="text" class="form-control" id="m_id" placeholder="Code" name="m_id"/>
                         </div>
                     </div>
                     <div class="row padtop15">
@@ -125,8 +131,12 @@
                             <label for="dname" class="form-control-label">Dealer Name:</label>
                         </div>
                         <div class="form-group col-md-8">
-                            <input type="text" name="dname" class="form-control" id="dname" placeholder="Dealer Name"
-                                   value=""/>
+                            <select name="dealer_name" class="form-control" id="dname">
+                                <option value="" selected disabled>Select Dealer</option>
+                                {% for dealers in dealers %}
+                                    <option value="{{ dealers.id }}">{{ dealers.name }}</option>
+                                {% endfor %}
+                            </select>
                         </div>
                     </div>
                     <div class="row padtop5">
