--- a/templates/purchase.html
+++ b/templates/purchase.html
@@ -55,7 +55,7 @@
                             <label for="phn_no" class="form-control-label padtop5">Phone Number:</label>
                         </div>
                         <div class="col-md-4">
-                            <input type="text" name="pno" class="form-control" id="phn_no" placeholder="Contact Number"
+                            <input type="text" name="phone_number" class="form-control" id="phn_no" placeholder="Contact Number"
                                    value="{{ purchase.phone_number }}" required/>
                         </div>
                     </div>
@@ -73,7 +73,7 @@
                             <label for="qty" class="form-control-label padtop5">Quantity:</label>
                         </div>
                         <div class="col-md-2">
-                            <input type="text" name="qty" class="form-control" id="qty" placeholder="Quantity"
+                            <input type="text" name="quantity" class="form-control" id="qty" placeholder="Quantity"
                                    value="{{ purchase.quantity }}" required/>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                             <label for="phn_no" class="form-control-label padtop5">Phone Number:</label>
                         </div>
                         <div class="col-md-4">
-                            <input type="text" name="pno" class="form-control" id="phn_no" placeholder="Contact Number"
+                            <input type="text" name="phone_number" class="form-control" id="phn_no" placeholder="Contact Number"
                                    required/>
                         </div>
                     </div>
@@ -145,7 +145,7 @@
                             <label for="qty" class="form-control-label padtop5">Quantity:</label>
                         </div>
                         <div class="col-md-2">
-                            <input type="text" name="qty" class="form-control" id="qty" placeholder="Quantity"
+                            <input type="text" name="quantity" class="form-control" id="qty" placeholder="Quantity"
                                    required/>
                         </div>
                     </div>
