--- a/templates/purchasetable.html
+++ b/templates/purchasetable.html
@@ -38,7 +38,7 @@
                         <td>{{ foo.phone_number }}</td>
                         <td>{{ foo.price }}</td>
                         <td>{{ foo.quantity }}</td>
-                        <td>{{ foo.total }}</td>
+                        <td>{{ foo.total_cost }}</td>
                     </tr>
                 {% endfor %}
             </table>
